--- a/tap_integration_tests/Cargo.toml
+++ b/tap_integration_tests/Cargo.toml
@@ -13,3 +13,4 @@ ethers = "2.0.0"
 clap = { version = "4.2.4", features = ["derive", "env"] }
 rstest = "0.17.0"
 rand = "0.8.5"
+futures = "0.3.28"
