--- a/tap_integration_tests/Cargo.toml
+++ b/tap_integration_tests/Cargo.toml
@@ -14,3 +14,4 @@ clap = { version = "4.2.4", features = ["derive", "env"] }
 rstest = "0.17.0"
 rand = "0.8.5"
 futures = "0.3.28"
+tracing-subscriber = "0.3.17"
