ci: remove package names from release-please config
Signed-off-by: Alexis Asseman <alexis@semiotic.ai>

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,10 +5,7 @@
   "bump-patch-for-minor-pre-major": true,
   "prerelease": true,
   "draft": false,
-  "packages": {
-    "tap_core": {},
-    "tap_aggregator": {}
-  },
+  "packages": {},
   "plugins": [
     {
       "type": "cargo-workspace"
