--- a/tap_aggregator/Cargo.toml
+++ b/tap_aggregator/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.70"
 tokio = { version = "1.27.0", features = ["macros", "signal"] }
-tap_core = { path = "../tap_core" }
+tap_core = { version = "0.1.0", path = "../tap_core" }
 jsonrpsee = { version = "0.18.0", features = ["server", "macros"] }
 ethers-signers = "2.0.3"
 clap = { version = "4.2.4", features = ["derive", "env"] }
