ci: add caching for cargo and pip
Signed-off-by: Alexis Asseman <alexis@semiotic.ai>

--- a/.github/workflows/dco_check.yml
+++ b/.github/workflows/dco_check.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+          cache: 'pip'
       - name: Check DCO
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
