--- a/.github/workflows/conventional_commits.yml
+++ b/.github/workflows/conventional_commits.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: "pip"
       - name: Install commitizen
         run: pip install commitizen
       - name: commitizen check
