--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,10 +79,10 @@ jobs:
             cargo install cargo-llvm-cov
       - name: Generate Code Coverage and PR
         run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info 
-      - uses: romeovs/lcov-reporter-action@v0.3.1
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2.2.0
         with:
-          lcov-file: lcov.info
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./lcov.info
 
   audit:
     name: Cargo Audit
