--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -114,29 +114,18 @@ jobs:
            echo "$body" >> $GITHUB_OUTPUT
            echo "$delimiter" >> $GITHUB_OUTPUT
 
-      - name: Report Folding
-        uses: actions/github-script@v6
-        if: github.event_name == 'pull_request'
-        env:
-          FINALREPORT: "${{ steps.report.outputs.body }}"
+      - name: Comment report
+        uses: marocchino/sticky-pull-request-comment@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `#### 🤖 **** Cargo Audit Report **** 🤖\`
-
+          hide_and_recreate: true
+          hide_classify: "OUTDATED"
+          message: |
+            #### 🤖 **** Cargo Audit Report **** 🤖
             <details><summary>Show Report</summary>
             \*\*\*\n
-            ${process.env.FINALREPORT}
+            ${{ steps.report.outputs.body }}
             \`\`\`
             </details>
-
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
   
   sbom:
     name: Syft SBOM Generator
