--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,7 @@ jobs:
             rustup component add llvm-tools-preview
             cargo install cargo-llvm-cov
       - name: Generate Code Coverage and PR
-        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info 
+        run: cargo llvm-cov --no-run --all-features --workspace --lcov --output-path lcov.info 
       - name: Coveralls
         uses: coverallsapp/github-action@v2.2.0
         with:
